# imminenti

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: db.ts  links.ts  main.ts  state.ts  styles.css  task.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/controllers/: collectionsModal.ts  drag.ts  linkDrag.ts  linkModal.ts  linksModal.ts  modal.ts  orderedDrag.ts
src/data/: viewTasks.ts
src/ui/: all.ts  collectionsModal.ts  events.ts  linksPanel.ts  ongoingList.ts  taskRender.ts  taskStripes.ts  weekGrid.ts
src/utils/: date.ts  dom.ts  openUrl.ts  validate.ts
