[package]
name = "imminenti"
version = "0.1.0"
description = "Deadline tracker"
authors = ["ashooww"]
edition = "2021"

[lib]
name = "imminenti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
